refactor: Product模組，改用Spring Framework注入(DI)相關Annotation。 調整前端首頁及相關首頁js，修改靜態資源攔截器