@@ -1,67 +1,34 @@
 package web.product.controller;
 
-import java.io.BufferedReader;
-import java.io.IOException;
+import java.util.Map;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
 
-import javax.servlet.ServletException;
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import com.google.gson.Gson;
-import com.google.gson.JsonObject;
-
+import web.member.exception.BusinessException;
 import web.product.service.ProductService;
-import web.product.service.impl.ProductServiceImpl;
 
-@WebServlet("/product-delete")
-public class ProductDeleteController extends HttpServlet {
-    private static final long serialVersionUID = 1L;
 
-    private transient ProductService productService;
-    private final Gson gson = new Gson();
 
-    @Override
-    public void init() throws ServletException {
-        productService = new ProductServiceImpl();
-    }
+@RestController
+public class ProductDeleteController {
 
-    @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-        req.setCharacterEncoding("UTF-8");
-        resp.setCharacterEncoding("UTF-8");
-        resp.setContentType("application/json;charset=UTF-8");
+	@Autowired
+	private ProductService productService;
 
-        String body = readBody(req);
-        JsonObject json;
-        try {
-            json = gson.fromJson(body, JsonObject.class);
-        } catch (Exception e) {
-            resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            resp.getWriter().write("{\"success\":false,\"message\":\"invalid json\"}");
-            return;
-        }
+	@PostMapping("/product-delete")
+	public ResponseEntity<Boolean> deleteProduct(@RequestBody Map<String, String> body) {
+		String sku = body.get("sku");
 
-        String sku = (json == null || json.get("sku") == null) ? null : json.get("sku").getAsString();
-        if (sku == null || sku.trim().isEmpty()) {
-            resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            resp.getWriter().write("{\"success\":false,\"message\":\"sku required\"}");
-            return;
-        }
+		if (sku == null || sku.isBlank()) {
+			throw new BusinessException("無該商品編號");
+		}
+		boolean ok = productService.deleteBySku(sku.trim());
 
-        boolean ok = productService.deleteBySku(sku.trim());
-        resp.getWriter().write("{\"success\":" + ok + "}");
-    }
+		return ResponseEntity.ok(ok);
 
-    private String readBody(HttpServletRequest req) throws IOException {
-        StringBuilder sb = new StringBuilder();
-        try (BufferedReader br = req.getReader()) {
-            String line;
-            while ((line = br.readLine()) != null) {
-                sb.append(line);
-            }
-        }
-        return sb.toString();
-    }
+	}
+
 }
